--- a/src/templates/plug/plug.scss
+++ b/src/templates/plug/plug.scss
@@ -1,6 +1,8 @@
 /* Layouts */
-#l-plug {
-	p {
+.page {
+	padding: 1.25rem;
+	
+	.pageText {
 		text-transform: uppercase;
 		word-break: break-word;
 	}
